# python-dunderlab.visualizations

./: .gitignore  LICENSE  README.md  dunderlab.vsualizations.wpr  dunderlab.vsualizations.wpu  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/_modules/: visualizations.accuracy.agco.rst  visualizations.accuracy.rst  visualizations.comparisons.gain.rst  visualizations.comparisons.models.rst  visualizations.comparisons.rst  visualizations.connectivities.circos.rst  visualizations.connectivities.rst  visualizations.rst  visualizations.series.eeg.rst  visualizations.series.rst  visualizations.topoplots.rst
docs/source/notebooks/: 01-connectivity_circosplot.ipynb  02-comparison_accuracy_gain.ipynb  03-eeg.ipynb  04-topoplot.ipynb  05-comparison_models.ipynb  __Untitled.ipynb  __comparison.ipynb  __models.ipynb  __sandbox.ipynb  gcpds  readme.ipynb  readme.rst  run.sh
docs/source/notebooks/.jupyter/: desktop-settings.json
docs/source/notebooks/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
dunderlab/visualizations/accuracy/: agco.py
dunderlab/visualizations/comparisons/: __init__.py  gain.py  models.py
dunderlab/visualizations/connectivities/: __init__.py  circos.py  pycircos.py
dunderlab/visualizations/models/: test.py
dunderlab/visualizations/topoplots/: __init__.py
